messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
  labels:
    app: django-messaging
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging
      version: green
  template:
    metadata:
      labels:
        app: django-messaging
        version: green
    spec:
      containers:
      - name: django-app
        image: your-django-image:v2  # Your new version
        ports:
        - containerPort: 8000
